--- a/manifest.yaml
+++ b/manifest.yaml
@@ -41,7 +41,7 @@ meta:
     - arm64
   runner:
     language: python
-    version: 3.12
+    version: "3.12"
     entrypoint: main
 created_at: 2025-03-08T15:05:02.321893+08:00
 privacy: PRIVACY.md
